# eink_homelab_monitor

./: CMakeLists.txt  main.c  readme copy.md  readme.md
lib/GUI/: GUI_Paint.c  GUI_Paint.h
utils/: CMakeLists.txt  DrawImageData.c  DrawImageData.h  custom_sleep.c  custom_sleep.h  http_request.c  http_request.h  init_wifi.c  ntp_client.c  utils.c  utils.h
